--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/nl.cloudfarming.client/lib-geotools -->
+        <dependency>
+            <groupId>nl.cloudfarming.client</groupId>
+            <artifactId>lib-geotools</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
 
     </dependencies>
 
