--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,26 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/nl.cloudfarming.client/lib-geotools -->
         <dependency>
-            <groupId>nl.cloudfarming.client</groupId>
-            <artifactId>lib-geotools</artifactId>
-            <version>2.7.4</version>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-shapefile</artifactId>
+            <version>25-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-swing</artifactId>
+            <!--suppress UnresolvedMavenProperty -->
+            <version>25-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geometry</artifactId>
+            <version>25-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geojson</artifactId>
+            <version>25-SNAPSHOT</version>
         </dependency>
 
 
